# Q3_25_Builder_KARTIK

./: .gitignore  .gitmodules  README.md  generate-readme.js  package.json
Capestone-Zeropolis/: README.md
Capestone-Zeropolis/contracts/: Anchor.toml
Frontends/vault-client/: package-lock.json  package.json
Frontends/vault-client/app/: layout.tsx  page.tsx
RotoFi/: Anchor.toml  README.md  create-codama-client.ts  txtx.yml
RotoFi/.anchor/test-ledger/: faucet-keypair.json
RotoFi/programs/rotofi/: Cargo.toml
RotoFi/runbooks/: README.md
Turbin3-prereqs/airdrop/: convert.js
escrow/: .gitignore  Anchor.toml  package-lock.json  package.json
escrow/cli/: index.js
escrow/tests/: escrow2.ts
escrow1/: Anchor.toml  Cargo.toml
escrow1/programs/escrow1/: Cargo.toml
escrow1/programs/escrow1/src/: lib.rs
escrow1/programs/escrow1/src/instructions/: make.rs  mod.rs  refund.rs  take.rs
escrow1/tests/: escrow1.ts
nft-marketplace/: Anchor.toml
nft-staking/: Anchor.toml
nft-staking/programs/nft-staking/: Cargo.toml
nft-staking/programs/nft-staking/src/: lib.rs
nft-staking/programs/nft-staking/src/instructions/: claim.rs  initalize_config.rs  initializeUser.rs  initialize_config.rs  initialize_user.rs  intialize_user.rs  mod.rs  stake.rs  unstake.rs
nft-staking/programs/nft-staking/src/state/: mod.rs  stake_account.rs  stake_config.rs  user_account.rs
ts/: .gitignore  package-lock.json  package.json
ts/cluster1/: nft_metadata.ts
vault/: Anchor.toml  client-requirements.md  package-lock.json
vault/tests/: vault.ts  vault1.ts
(+63 files in other folders)
